admin login/main page display fixed

--- a/pse-dbmodell/src/main/webapp/protected/News.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/News.xhtml
@@ -19,7 +19,7 @@
 				chunkSize="10" mode="inline" scrollHeight="400">
 				<h:panelGrid columns="1" style="width:100%"
 					columnClasses="logo,detail">
-					<p:outputPanel>
+					<p:outputPanel id="newsPanel">
 						<h:panelGrid columns="7" cellpadding="5">
 							<h:outputText value="Datum:" />
 							<h:outputText value="#{news.date}" style="font-weight: bold">
