--- a/pse-dbmodell/src/main/webapp/index.xhtml
+++ b/pse-dbmodell/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
 		<h1>Welcome to PSE!</h1>
-		<h:form>
+		<h:form id="loginform">
 			<h:panelGroup rendered="#{!loginController.isLoggedIn}">
 				Um mit der Arbeit zu beginnen, müssen sie sich <em><a
 					href="javascript:void(0)" onclick="PF('dlg').show()">einloggen!</a></em>
@@ -32,7 +32,7 @@
 						required="true" label="Passwort" />
 
 					<f:facet name="footer">
-						<p:commandButton value="Anmelden" update="growl"
+						<p:commandButton value="Anmelden" update="growl" id="loginbutton"
 							action="#{loginController.login}" />
 						<p:commandButton value="Abbrechen" update="growl"
 							onclick="PF('dlg').hide();" />
