Active flag test

--- a/pse-dbmodell/src/main/webapp/protected/User.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/User.xhtml
@@ -173,7 +173,7 @@
 					<p:column>
 						<p:selectBooleanCheckbox
 							value="#{userProfileController.userDTO.active}"
-							disabled="#{!(userProfileController.activeFlagEnabled)}" />
+							disabled="#{!(userProfileController.activeFlagEnabled)}" id="active"/>
 						<p:outputLabel value="  Aktiv" />
 					</p:column>
 					<p:column>
