Added login allowed testcase

--- a/pse-dbmodell/src/main/webapp/protected/User.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/User.xhtml
@@ -178,7 +178,7 @@
 					</p:column>
 					<p:column>
 						<p:selectBooleanCheckbox
-							value="#{userProfileController.userDTO.loginAllowed}"
+							value="#{userProfileController.userDTO.loginAllowed}"  id="loginallowed"
 							disabled="#{!(userProfileController.loginAllowedFlagEnabled)}" />
 						<p:outputLabel value="  Login erlaubt" />
 					</p:column>
