--- a/pse-dbmodell/src/main/webapp/protected/UserPasswordChange.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/UserPasswordChange.xhtml
@@ -6,7 +6,7 @@
 	xmlns:p="http://primefaces.org/ui"
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
-		<h:form>
+		<h:form id="passwordchangeform">
 			<h:panelGrid columns="2" cellpadding="5">
 
 				<h:outputLabel for="oldPassword" value="Altes Passwort:" />
@@ -24,7 +24,7 @@
 					label="Neues Passwort erneut eingeben" />
 
 				<f:facet name="footer">
-					<p:commandButton value="Bestätigung" update="growl"
+					<p:commandButton id ="confirmationButton" value="Bestätigung" update="growl"
 						action="#{loginController.changePassword}" />
 					<p:button value="Abbrechen" outcome="Main.xhtml" />
 				</f:facet>
