Added selenium tests for password reset page

--- a/pse-dbmodell/src/main/webapp/ResetPassword.xhtml
+++ b/pse-dbmodell/src/main/webapp/ResetPassword.xhtml
@@ -7,15 +7,15 @@
 	template="/WEB-INF/templates/default.xhtml">
 	<ui:define name="content">
 		<h1>Kennwort zurücksetzen</h1>
-		<h:form>
+		<h:form id="resetPasswordForm">
 
 
 			<p:outputLabel value="E-Mail-Adresse: " />
 
 
-			<p:inputText value="#{resetPasswordController.emailAddress}"/>
+			<p:inputText value="#{resetPasswordController.emailAddress}" id="emailAddress"/>
 			<p>
-				<p:commandButton value="Kennwort zurücksetzen" action="#{resetPasswordController.resetPassword}" update="response"/>
+				<p:commandButton value="Kennwort zurücksetzen" action="#{resetPasswordController.resetPassword}" update="response" id="resetPasswordButton"/>
 
 								
 			</p>
