--- a/pse-dbmodell/src/main/webapp/index.xhtml
+++ b/pse-dbmodell/src/main/webapp/index.xhtml
@@ -38,7 +38,7 @@
 							onclick="PF('dlg').hide();" />
 					</f:facet>
 
-					<p:link outcome="ResetPassword.xhtml" value="Passwort vergessen">
+					<p:link outcome="ResetPassword.xhtml" id="resetPasswordLink" value="Passwort vergessen">
 					</p:link>
 
 				</h:panelGrid>
