--- a/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/UserList.xhtml
@@ -9,7 +9,7 @@
 
 		<h:form>
 
-			<p:dataScroller value="#{userListView.users}" var="user"
+			<p:dataScroller value="#{userListController.users}" var="user"
 				chunkSize="10" mode="inline" scrollable="true" scrollHeight="1000">
 				<f:facet name="header">
             		Liste aller Benutzer
