--- a/pse-dbmodell/src/main/webapp/protected/privateMessages.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/privateMessages.xhtml
@@ -14,7 +14,7 @@
 
 			<h1>
 				Private Nachrichten für
-				<h:outputText value="#{userProfileController.userDTO.fullName}" />
+				<h:outputText value="#{userProfileController.person.getFullName()}" />
 			</h1>
 
 		</h:form>
