--- a/pse/src/main/webapp/protected/User.xhtml
+++ b/pse/src/main/webapp/protected/User.xhtml
@@ -283,7 +283,8 @@
 							<f:facet name="footer">
 								<p:commandButton value="Neue Community beantragen"
 									onclick="PF('communityDialog').show()"
-									rendered="#{userProfileController.modeEdit}" />
+									rendered="#{userProfileController.modeEdit}"
+									id="communityButton" />
 							</f:facet>
 						</p:dataTable>
 					</p:tab>
@@ -301,7 +302,8 @@
 					<f:facet name="footer">
 						<p:commandButton value="Beantragen" update="growl :userForm"
 							action="#{userProfileController.createCommunity()}"
-							onclick="PF('communityDialog').hide();" />
+							onclick="PF('communityDialog').hide();"
+							id="requestButton"/>
 						<p:commandButton value="Abbrechen"
 							onclick="PF('communityDialog').hide();" />
 					</f:facet>
